Some layout issues

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -5,7 +5,3 @@
  *= require_self
  *= require_tree . 
 */
-
-.user {
-	cursor: pointer;
-}
